# mimic-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_template.md
.github/workflows/: ci.yml  release.yml
examples/: basic_demo.rs  conditional_response.rs
examples/resources/: user.json
src/: lib.rs  main.rs
src/conditional/: handler.rs
src/handlers/: dynamic.rs  mod.rs  reset.rs  setup.rs  verify.rs
src/models/: expectation.rs  mod.rs  record.rs  response.rs  verify.rs
src/server/: expectation_builder.rs  mod.rs
tests/: basic_tests.rs  conditional_tests.rs  http_api_tests.rs  path_matching_tests.rs  request_details_tests.rs
