[package]
name = "mimic-rs"
version = "0.1.0"
edition = "2024"
authors = ["Martin Pluhar <pluhar.martin93@gmail.com>"]
description = "A flexible and Blazingly FAST HTTP mock server for testing, written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ArmadOon/mimic-rs"
keywords = ["mock", "http", "test", "server", "api"]
categories = ["development-tools", "web-programming"]
[dependencies]
# HTTP Server framework
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serde for JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility libraries
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.9"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"
rand = "0.9.0"

[dev-dependencies]
# Tests
reqwest = { version = "0.12.14", features = ["json"] }
